--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react-dom": "^18.0.8",
     "axios": "^1.1.3",
     "emailjs": "^4.0.1",
+    "glider-js": "^1.7.8",
     "react": "^18.2.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
